added about section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <a href="#" class="brand-logo">Fatema Akter</a>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#intro">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -22,7 +22,7 @@
     </nav>
     <!--Navigation bar End-->
     <!--Intro section Start-->
-    <section class="top-banner">
+    <section id="intro" class="top-banner">
         <div class="half-width">
             <h1>Hello, I'm</h1>
             <h1><span>Fatema Akter</span></h1>
@@ -34,6 +34,18 @@
         </div>
     </section>
     <!--Intro section End-->
+    <!--About section Start-->
+    <section id="about" class="about-banner">
+        <div class="half-width">
+            <img src="assets/images/photo-2.png" alt="Fatema's photo">
+        </div>
+        <div class="half-width">
+            <h1>About</h1>
+            <p>I am a highly motivated and hardworking person. I'vecompleted my HSC in science from YWCA Higher SecondaryGirls' School and now studying for further educationalqualification. Besides, I am an Instagram beauty blogger.</p>
+            <a class="anchor-button" target="_blank" href="assets/files/Fatema-Akter-Resume.pdf" download>Download Resume</a>
+        </div>
+    </section>
+        <!--About section End-->
 
 </body>
 </html>
