--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Contact Start-->
         <section id="contact" class="contact-banner">
         <div class="contact">
-            <form action="/form.html" target="_blank" method="POST">
+            <form action="/form.html" target="_blank" method="GET">
                 <label><h4>First Name</h4></label>
                 <input type="text" name="firstname" placeholder="Your name.." required/>
             
