updated contact form

--- a/form.html
+++ b/form.html
@@ -7,6 +7,6 @@
     <title>Fatema Akter</title>
 </head>
 <body>
-    <h1 style="text-align: center;background-color: tomato;">Your Response is successfully recieved</h1>
+    <h2 style="text-align: center;background: linear-gradient(45deg, #e66465, #9198e5);">Your Response is successfully recieved</h2>
 </body>
 </html>
