--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="half-width">
             <h1>Hello, I'm</h1>
             <h1><span>Fatema Akter</span></h1>
-            <p>A Content Creator | YWCA Student <br> I now live in Dhaka, Bangladesh </p>
+            <p>A Content Creator | YWCA Student <br> I now live in Dhaka, Bangladesh </p><br>
             <a class="anchor-button" target="_blank" href="https://www.instagram.com/itsme.fatema/">Follow Me</a>
         </div>
         <div class="half-width">
@@ -41,7 +41,7 @@
         </div>
         <div class="half-width">
             <h1>About</h1>
-            <p>I am a highly motivated and hardworking person. I'vecompleted my HSC in science from YWCA Higher SecondaryGirls' School and now studying for further educationalqualification. Besides, I am an Instagram beauty blogger.</p>
+            <p>I am a highly motivated and hardworking person. I'vecompleted my HSC in science from YWCA Higher SecondaryGirls' School and now studying for further educationalqualification. Besides, I am an Instagram beauty blogger.</p><br>
             <a class="anchor-button" target="_blank" href="assets/files/Fatema-Akter-Resume.pdf" download>Download Resume</a>
         </div>
     </section>
@@ -62,7 +62,7 @@
         <!-- Contact Start-->
         <section id="contact" class="contact-banner">
         <div class="contact">
-            <form action="/form.html" target="_blank" method="GET">
+            <form action="form.html" target="_blank" method="GET">
                 <label><h4>First Name</h4></label>
                 <input type="text" name="firstname" placeholder="Your name.." required/>
             
