--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fatema Akter</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!--Navigation bar Start-->
@@ -78,7 +79,11 @@
         <!-- Contact End-->
         <!-- Footer Start-->
         <div class="footer">
-            <p>© 2021 | <a href="#intro">Fatema Akter</a>. All Rights Reserved | Developed by <a href="https://itshumayun.com/" target="_blank">Humayun Ahmed</a></p>
+            <p>© 2021 | <a href="#intro">Fatema Akter</a>. All Rights Reserved | Developed by <a href="https://itshumayun.com/" target="_blank">Humayun Ahmed</a>&nbsp;&nbsp;
+                <a href="mailto:fatemaaktermariya@gmail.com" class="fa fa-google"></a>&nbsp;&nbsp;
+                <a href="https://www.instagram.com/itsme.fatema/" class="fa fa-instagram" target="_blank"></a>&nbsp;&nbsp;
+                <a href="https://twitter.com/Fatema_Twiitter" class="fa fa-twitter" target="_blank"></a>
+            </p>
           </div>
         <!-- Footer End-->
         
